made transcript processor and evaluation of similar syntax

--- a/example_usage.ipynb
+++ b/example_usage.ipynb
@@ -104,13 +104,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define fields for basic examples\n",
+    "basic_fields = [\n",
+    "    {\n",
+    "        \"field_name\": \"representative_name\",\n",
+    "        \"field_type\": \"string\",\n",
+    "        \"format_example\": \"Sarah Chen\",\n",
+    "        \"field_description\": \"The name of the customer service representative or agent who is helping the customer. This should be extracted from their introduction or when they identify themselves during the conversation.\",\n",
+    "    }\n",
+    "]\n",
+    "\n",
     "# With reasoning (provides explanations)\n",
-    "processor_with_reasoning = TranscriptProcessor(api_key=api_key, include_reasoning=True)\n",
+    "processor_with_reasoning = TranscriptProcessor(api_key=api_key, fields=basic_fields, include_reasoning=True)\n",
     "\n",
     "# Without reasoning (faster, lower cost)\n",
-    "processor_without_reasoning = TranscriptProcessor(api_key=api_key, include_reasoning=False)\n",
+    "processor_without_reasoning = TranscriptProcessor(api_key=api_key, fields=basic_fields, include_reasoning=False)\n",
     "\n",
-    "print(\"✅ Processors initialized successfully!\")"
+    "print(\"✅ Processors initialized successfully!\")\n"
    ]
   },
   {
@@ -142,20 +152,12 @@
     "            \"content\": \"I understand you have billing concerns. I can definitely help you with that. Let me pull up your account information. Can you please provide me with your account number or the email address associated with your account?\",\n",
     "        },\n",
     "    ],\n",
-    "    \"fields\": [\n",
-    "        {\n",
-    "            \"field_name\": \"representative_name\",\n",
-    "            \"field_type\": \"string\",\n",
-    "            \"format_example\": \"Sarah Chen\",\n",
-    "            \"field_description\": \"The name of the customer service representative or agent who is helping the customer. This should be extracted from their introduction or when they identify themselves during the conversation.\",\n",
-    "        }\n",
-    "    ],\n",
     "}\n",
     "\n",
     "print(\"Processing basic example with reasoning...\")\n",
     "result_with_reasoning = processor_with_reasoning.process(basic_input_data)\n",
     "print(\"\\n✅ Extraction Result (with reasoning):\")\n",
-    "print(json.dumps(result_with_reasoning, indent=2))"
+    "print(json.dumps(result_with_reasoning, indent=2))\n"
    ]
   },
   {
@@ -198,6 +200,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define fields for complex example\n",
+    "complex_fields = [\n",
+    "    {\n",
+    "        \"field_name\": \"agent_name\",\n",
+    "        \"field_type\": \"string\",\n",
+    "        \"format_example\": \"Jennifer Martinez\",\n",
+    "        \"field_description\": \"The full name of the insurance agent, customer service representative, or company employee who is assisting the customer. Look for introductions like 'This is [Name] from [Company]' or when they identify themselves during the conversation.\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"field_name\": \"customer_name\",\n",
+    "        \"field_type\": \"string\",\n",
+    "        \"format_example\": \"Michael Torres\",\n",
+    "        \"field_description\": \"The customer's full name or last name. This could be mentioned when the agent addresses them (e.g., 'Mr. Torres', 'Ms. Johnson') or when the customer introduces themselves. Look for formal address patterns and name references.\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"field_name\": \"customer_phone\",\n",
+    "        \"field_type\": \"string\",\n",
+    "        \"format_example\": \"415-555-9876\",\n",
+    "        \"field_description\": \"The customer's current phone number mentioned during the call. Pay attention to any updates or corrections to phone numbers during the conversation. Look for 10-digit numbers in formats like 415-555-9876, (415) 555-9876, or similar patterns.\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"field_name\": \"customer_email\",\n",
+    "        \"field_type\": \"string\",\n",
+    "        \"format_example\": \"michael.torres@techcorp.com\",\n",
+    "        \"field_description\": \"The customer's email address provided or confirmed during the conversation. Look for standard email format with @ symbol and domain. This might be mentioned for verification or contact purposes.\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"field_name\": \"incident_date\",\n",
+    "        \"field_type\": \"string\",\n",
+    "        \"format_example\": \"December 8, 2024\",\n",
+    "        \"field_description\": \"The exact date when the incident, accident, or event being discussed occurred. This is the base date for calculating other related dates. Look for dates mentioned as 'accident date', 'incident date', or when the event happened.\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"field_name\": \"resolution_date\",\n",
+    "        \"field_type\": \"string\",\n",
+    "        \"format_example\": \"January 15, 2024\",\n",
+    "        \"field_description\": \"The expected or promised date when the issue, claim, or matter will be resolved or completed. This could be mentioned as 'resolved by', 'completed by', 'finalized by', or similar future date references related to case resolution.\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"field_name\": \"appointment_date\",\n",
+    "        \"field_type\": \"string\",\n",
+    "        \"format_example\": \"December 13, 2024\",\n",
+    "        \"field_description\": \"The calculated appointment date that is always scheduled for 'next Friday' relative to the incident date. When the conversation mentions 'next week Friday after the incident date' or 'Friday of the following week from the accident', calculate the actual date. For incident on December 3, 2024 (Tuesday), next week Friday would be December 13, 2024.\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"field_name\": \"company_name\",\n",
+    "        \"field_type\": \"string\",\n",
+    "        \"format_example\": \"AutoClaim Solutions\",\n",
+    "        \"field_description\": \"The name of the company, organization, or business that the agent represents. This is typically mentioned in the agent's introduction like 'calling from [Company Name]' or 'I'm with [Company Name]'.\",\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "complex_processor = TranscriptProcessor(api_key=api_key, fields=complex_fields, include_reasoning=True)\n",
+    "\n",
     "complex_input_data = {\n",
     "    \"messages\": [\n",
     "        {\n",
@@ -237,62 +293,12 @@
     "            \"content\": \"That's correct - next week Friday after the incident date. And no, this will be with our specialist David Chen, not the previous adjuster. He'll meet you at the collision center on Oak Avenue at 10:30 AM.\",\n",
     "        },\n",
     "    ],\n",
-    "    \"fields\": [\n",
-    "        {\n",
-    "            \"field_name\": \"agent_name\",\n",
-    "            \"field_type\": \"string\",\n",
-    "            \"format_example\": \"Jennifer Martinez\",\n",
-    "            \"field_description\": \"The full name of the insurance agent, customer service representative, or company employee who is assisting the customer. Look for introductions like 'This is [Name] from [Company]' or when they identify themselves during the conversation.\",\n",
-    "        },\n",
-    "        {\n",
-    "            \"field_name\": \"customer_name\",\n",
-    "            \"field_type\": \"string\",\n",
-    "            \"format_example\": \"Michael Torres\",\n",
-    "            \"field_description\": \"The customer's full name or last name. This could be mentioned when the agent addresses them (e.g., 'Mr. Torres', 'Ms. Johnson') or when the customer introduces themselves. Look for formal address patterns and name references.\",\n",
-    "        },\n",
-    "        {\n",
-    "            \"field_name\": \"customer_phone\",\n",
-    "            \"field_type\": \"string\",\n",
-    "            \"format_example\": \"415-555-9876\",\n",
-    "            \"field_description\": \"The customer's current phone number mentioned during the call. Pay attention to any updates or corrections to phone numbers during the conversation. Look for 10-digit numbers in formats like 415-555-9876, (415) 555-9876, or similar patterns.\",\n",
-    "        },\n",
-    "        {\n",
-    "            \"field_name\": \"customer_email\",\n",
-    "            \"field_type\": \"string\",\n",
-    "            \"format_example\": \"michael.torres@techcorp.com\",\n",
-    "            \"field_description\": \"The customer's email address provided or confirmed during the conversation. Look for standard email format with @ symbol and domain. This might be mentioned for verification or contact purposes.\",\n",
-    "        },\n",
-    "        {\n",
-    "            \"field_name\": \"incident_date\",\n",
-    "            \"field_type\": \"string\",\n",
-    "            \"format_example\": \"December 8, 2024\",\n",
-    "            \"field_description\": \"The exact date when the incident, accident, or event being discussed occurred. This is the base date for calculating other related dates. Look for dates mentioned as 'accident date', 'incident date', or when the event happened.\",\n",
-    "        },\n",
-    "        {\n",
-    "            \"field_name\": \"resolution_date\",\n",
-    "            \"field_type\": \"string\",\n",
-    "            \"format_example\": \"January 15, 2024\",\n",
-    "            \"field_description\": \"The expected or promised date when the issue, claim, or matter will be resolved or completed. This could be mentioned as 'resolved by', 'completed by', 'finalized by', or similar future date references related to case resolution.\",\n",
-    "        },\n",
-    "        {\n",
-    "            \"field_name\": \"appointment_date\",\n",
-    "            \"field_type\": \"string\",\n",
-    "            \"format_example\": \"December 13, 2024\",\n",
-    "            \"field_description\": \"The calculated appointment date that is always scheduled for 'next Friday' relative to the incident date. When the conversation mentions 'next week Friday after the incident date' or 'Friday of the following week from the accident', calculate the actual date. For incident on December 3, 2024 (Tuesday), next week Friday would be December 13, 2024.\",\n",
-    "        },\n",
-    "        {\n",
-    "            \"field_name\": \"company_name\",\n",
-    "            \"field_type\": \"string\",\n",
-    "            \"format_example\": \"AutoClaim Solutions\",\n",
-    "            \"field_description\": \"The name of the company, organization, or business that the agent represents. This is typically mentioned in the agent's introduction like 'calling from [Company Name]' or 'I'm with [Company Name]'.\",\n",
-    "        },\n",
-    "    ],\n",
     "}\n",
     "\n",
     "print(\"Processing complex multi-field example...\")\n",
-    "complex_result = processor_with_reasoning.process(complex_input_data)\n",
+    "complex_result = complex_processor.process(complex_input_data)\n",
     "print(\"\\n✅ Complex Extraction Result:\")\n",
-    "print(json.dumps(complex_result, indent=2))"
+    "print(json.dumps(complex_result, indent=2))\n"
    ]
   },
   {
